<resources>
    <string name="shared_preference_file_key">Tabeeby</string>
    <string name="app_id">1713068595610330</string>
    <string name="pref_email">email</string>
    <string name="pref_picture">picture</string>
    <string name="pref_access_token">access_token</string>
    <string name="pref_user_type">user_type</string>
    <string name="pref_login_type">login_type</string>
    <string name="pref_user_id">id</string>
    <string name="app_name">Tabeeby</string>
    <string name="next_step">Next Step</string>
    <string name="skip">Skip</string>
    <string name="manege_doctors">Find Doctors</string>
    <string name="book_appointements">Book Appointment</string>
    <string name="manege_patients">Find Patient &amp; Members</string>
    <string name="get_answers">Get Answers</string>
    <string name="manege_appointements">Manage Appointments</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="select_language">Select Language</string>
    <string name="select_country">Select Country</string>
    <string name="creating_an_account">Creating an account</string>
    <string name="service_name">Service Name</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="full_name">Full Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="mobile_no">Mobile No</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="or">or</string>
    <string name="already_a_member">Already a Member? Sign In!</string>
    <string name="need_an_account">Need an account?</string>
    <string name="login">Login</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="enter_the_otp">Enter the otp</string>
    <string name="otp">otp</string>
    <string name="verify_mobile_no_text">Sit back and relax while we verify your mobile no.</string>
    <string name="forgot_yout_password">Forgot your password</string>
    <string name="enter_your_email_id_to_reset">Enter your email below to reset your password</string>
    <string name="error_enter_email_id">Enter email id</string>
    <string name="error_enter_valid_email_id">Enter valid email id</string>
    <string name="please_wait">Please wait.</string>
    <string name="upload_your_profile_picture">Upload Your Profile Picture</string>
    <string name="take_a_photo">Take a Photo</string>
    <string name="upload_from_gallery">Upload from Gallery</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_q_and_a">Q &amp; A</string>
    <string name="nav_my_q_and_a">My Q &amp; A</string>
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_my_patient">My Patient</string>
    <string name="nav_my_appointments">My Appointments</string>
    <string name="nav_account">Account</string>
    <string name="nav_setting">Setting</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_my_doctors">My Doctors</string>
    <string name="events">Events</string>
    <string name="news">News</string>
    <string name="feeds">Feeds</string>
    <string name="patients">Patients</string>
    <string name="doctors">Doctors</string>
    <string name="appointments">Appointments</string>
    <string name="offers">Offers</string>
    <string name="my_doctors">My Doctors</string>
    <string name="recommended">Recommended</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="what_s_on_your_mind">What\'s On Your Mind?</string>
    <string name="unfollow">Unfollow</string>
    <string name="recommend">Recommend</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="upcoming">Upcoming</string>
    <string name="favorite_doctor">Favorite Doctor</string>
    <string name="emergency">Emergency</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="follow">Follow</string>
    <string name="services">Services</string>
    <string name="profile">Profile</string>
    <string name="yes_i_am_a">Yes ! I am a</string>
    <string name="doctor">Doctor</string>
    <string name="health_care_provider">Health care provider</string>
    <string name="consultant">Consultant</string>
    <string name="specialist">Specialist</string>
    <string name="registrar">Registrar</string>
    <string name="general_practitioner">General Practitioner</string>
    <string name="other">Other</string>
    <string name="select_health_care_provider">Select Health Care Provider</string>
    <string name="select_type">Select Type</string>
    <string name="clinics">Clinic</string>
    <string name="hospital">Hospital</string>
    <string name="fitness_center">Fitness Center</string>
    <string name="pharmacies">Pharmacy</string>
    <string name="medical_tourism_home_health_care">Medical Tourism Home Healthcare</string>
    <string name="labs">Laboratory</string>
    <string name="notification">Notification</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="termscondition">Terms and condition apply</string>
    <string name="done">Done</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="notification_text">(Enter the OTP below in case if we fail to detect the sms automatically)</string>
    <string name="otp_resend_mssg">Didn\'t receive OTP, Click here to resend.</string>
    <string name="please_wait_verifying_otp">Please wait while we verify OTP.</string>
    <string name="post">Post</string>
    <string name="signup_first_name_error_msg">Enter First Name</string>
    <string name="signup_last_name_error_msg">Enter Last Name</string>
    <string name="signup_email_address_error_msg">Enter Email Address</string>
    <string name="signup_valid_email_address_msg">Enter Valid Email Address</string>
    <string name="signup_mobile_number_error_msg">Enter Mobile Number</string>
    <string name="signup_valid_mobile_number_error_msg">Enter Valid Mobile Number</string>
    <string name="select_country_error_msg">Select Country</string>
    <string name="terms_and_condition_error_msg">Please Check Terms and Condition</string>
    <string name="select_doctor_provider_error_msg">Select Doctor or provider</string>
    <string name="Enter_User_Name">Enter User Name</string>
    <string name="Enter_Password">Enter Password</string>
    <string name="Enter_Confirm_Password">Enter Confirm Password</string>
    <string name="Password_Mismatch">Password Mismatch</string>
    <string name="minimum_length">Password should be minimum 3 characters.</string>
    <string name="Afghanistan">Afghanistan</string>
    <string name="Albania">Albania</string>
    <string name="Algeria">Algeria</string>
    <string name="Andorra">Andorra</string>
    <string name="Angola">Angola</string>
    <string name="Antigua_and_Barbuda">Antigua and Barbuda</string>
    <string name="Argentina">Argentina</string>
    <string name="Armenia">Armenia</string>
    <string name="Australia">Australia</string>
    <string name="Austria">Austria</string>
    <string name="Azerbaijan">Azerbaijan</string>
    <string name="Bahamas">Bahamas</string>
    <string name="Bahrain">Bahrain</string>
    <string name="Bangladesh">Bangladesh</string>
    <string name="Barbados">Barbados</string>
    <string name="Belarus">Belarus</string>
    <string name="Belgium">Belgium</string>
    <string name="Belize">Belize</string>
    <string name="Benin">Benin</string>
    <string name="Bhutan">Bhutan</string>
    <string name="Bolivia">Bolivia</string>
    <string name="Bosnia_and_Herzegovina">Bosnia and Herzegovina</string>
    <string name="Botswana">Botswana</string>
    <string name="Brazil">Brazil</string>
    <string name="Brunei">Brunei</string>
    <string name="Bulgaria">Bulgaria</string>
    <string name="Burkina_Faso">Burkina Faso</string>
    <string name="Burundi">Burundi</string>
    <string name="Cabo_Verde">Cabo Verde</string>
    <string name="Cambodia">Cambodia</string>
    <string name="Cameroon">Cameroon</string>
    <string name="Canada">Canada</string>
    <string name="Central_African_Republic_CAR">Central African Republic (CAR)</string>
    <string name="Chad">Chad</string>
    <string name="Chile">Chile</string>
    <string name="China">China</string>
    <string name="Colombia">Colombia</string>
    <string name="Comoros">Comoros</string>
    <string name="Democratic_Republic_of_the_Congo">Democratic Republic of the Congo</string>
    <string name="Republic_of_the_Congo">Republic of the Congo</string>
    <string name="Costa_Rica">Costa Rica</string>
    <string name="Cote_dIvoire">Cote d\'Ivoire</string>
    <string name="Croatia">Croatia</string>
    <string name="Cuba">Cuba</string>
    <string name="Cyprus">Cyprus</string>
    <string name="Czech_Republic">Czech Republic</string>
    <string name="Denmark">Denmark</string>
    <string name="Djibouti">Djibouti</string>
    <string name="Dominica">Dominica</string>
    <string name="Dominican_Republic">Dominican Republic</string>
    <string name="Ecuador">Ecuador</string>
    <string name="Egypt">Egypt</string>
    <string name="El_Salvador">El Salvador</string>
    <string name="Equatorial_Guinea">Equatorial Guinea</string>
    <string name="Eritrea">Eritrea</string>
    <string name="Estonia">Estonia</string>
    <string name="Ethiopia">Ethiopia</string>
    <string name="Fiji">Fiji</string>
    <string name="Finland">Finland</string>
    <string name="France">France</string>
    <string name="Gabon">Gabon</string>
    <string name="Gambia">Gambia</string>
    <string name="Georgia">Georgia</string>
    <string name="Germany">Germany</string>
    <string name="Ghana">Ghana</string>
    <string name="Greece">Greece</string>
    <string name="Grenada">Grenada</string>
    <string name="Guatemala">Guatemala</string>
    <string name="Guinea">Guinea</string>
    <string name="Guinea_Bissau">Guinea-Bissau</string>
    <string name="Guyana">Guyana</string>
    <string name="Haiti">Haiti</string>
    <string name="Honduras">Honduras</string>
    <string name="Hungary">Hungary</string>
    <string name="Iceland">Iceland</string>
    <string name="India">India</string>
    <string name="Indonesia">Indonesia</string>
    <string name="Iran">Iran</string>
    <string name="Iraq">Iraq</string>
    <string name="Ireland">Ireland</string>
    <string name="Israel">Israel</string>
    <string name="Italy">Italy</string>
    <string name="Jamaica">Jamaica</string>
    <string name="Japan">Japan</string>
    <string name="Jordan">Jordan</string>
    <string name="Kazakhstan">Kazakhstan</string>
    <string name="Kenya">Kenya</string>
    <string name="Kiribati">Kiribati</string>
    <string name="Kosovo">Kosovo</string>
    <string name="Kuwait">Kuwait</string>
    <string name="Kyrgyzstan">Kyrgyzstan</string>
    <string name="Laos">Laos</string>
    <string name="Latvia">Latvia</string>
    <string name="Lebanon">Lebanon</string>
    <string name="Lesotho">Lesotho</string>
    <string name="Liberia">Liberia</string>
    <string name="Libya">Libya</string>
    <string name="Liechtenstein">Liechtenstein</string>
    <string name="Lithuania">Lithuania</string>
    <string name="Luxembourg">Luxembourg</string>
    <string name="Macedonia">Macedonia</string>
    <string name="Madagascar">Madagascar</string>
    <string name="Malawi">Malawi</string>
    <string name="Malaysia">Malaysia</string>
    <string name="Maldives">Maldives</string>
</resources>