<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themColor"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tabeeby.doctor.activities.signup.PasswordScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_otp_48dp" />

    <TextView
        style="@style/TextViewHigh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/enter_your_password"
        android:textStyle="normal" />

    <include
        layout="@layout/horizantal_white_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/edittext_hint_color">

            <EditText
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:drawableLeft="@drawable/ic_key_white_18dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/edittext_hint_color">

            <EditText
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:drawableLeft="@drawable/ic_key_white_18dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textColorHint="@color/white" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimary"
        android:inputType="textCapWords"
        android:onClick="nextStep"
        android:text="@string/done"
        android:textColor="@color/white" />
</RelativeLayout>
