<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="2dp"
    android:background="@color/colorBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical"
                android:paddingTop="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_creating_ac_48dp" />

                <TextView
                    style="@style/TextViewHigh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/creating_an_account"
                    android:textSize="18sp" />

                <include
                    layout="@layout/horizantal_white_line"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-15dp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputtype"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/edittext_hint_color">

                    <EditText
                        android:id="@+id/edtType"
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:drawableLeft="@drawable/ic_organisation_white_18dp"
                        android:hint="@string/service_name"
                        android:inputType="textCapWords"
                        android:textColorHint="@color/white" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/edittext_hint_color"
                    app:errorTextAppearance="@style/error_appearance">

                    <EditText
                        android:id="@+id/edtFirstName"
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:drawableLeft="@drawable/ic_user_white_18dp"
                        android:hint="@string/first_name"
                        android:inputType="textCapWords"
                        android:textColorHint="@color/white" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/edittext_hint_color"
                    app:errorTextAppearance="@style/error_appearance">

                    <EditText
                        android:id="@+id/edtLastName"
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:drawableLeft="@drawable/ic_user_white_18dp"
                        android:hint="@string/last_name"
                        android:inputType="text"
                        android:textColorHint="@color/white" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputUserEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/edittext_hint_color"
                    android:visibility="gone"
                    app:errorTextAppearance="@style/error_appearance">

                    <EditText
                        android:id="@+id/edtUserEmail"
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:drawableLeft="@drawable/ic_mail_white_18dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputMobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/edittext_hint_color"
                    app:errorTextAppearance="@style/error_appearance">

                    <EditText
                        android:id="@+id/edtMobileNumber"
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:drawableLeft="@drawable/ic_phone_white_18dp"
                        android:hint="@string/mobile_no"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:textColorHint="@color/white" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter email"
                        android:paddingLeft="10dp"
                        android:textSize="16sp" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="nextStep"
                android:text="@string/next_step" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/or" />


            <!--<com.facebook.login.widget.LoginButton
                android:id="@+id/usersettings_fragment_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:paddingBottom="14dp"
                android:paddingTop="14dp"
                android:visibility="visible" />-->


            <!-- <Button
                 android:id="@+id/login_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:layout_marginLeft="50dp"
                 android:layout_marginRight="50dp"
                 android:layout_marginTop="10dp"
                 android:visibility="visible" />


             <Button
                  android:id="@+id/login_button"
                  android:layout_width="match_parent"
                  android:layout_height="48dp"
                  android:layout_marginBottom="10dp"
                  android:layout_marginLeft="50dp"
                  android:layout_marginRight="50dp"
                  android:layout_marginTop="5dp"
                  android:background="@drawable/fb"
                  android:visibility="visible" />-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:onClick="alreadyMember"
                android:text="@string/already_a_member" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>